<?xml version="1.0" encoding="utf-8"?>

<!DOCTYPE resources [<!ENTITY recipe "recipe-for-you"><!ENTITY author "peng wang">]>
<resources>

    <string name="app_name" translatable="false">Graphical</string>
    <string name="hello_message" translatable="false">Hello cccc Android World!</string>
    <string name="ButtonText" translatable="false">I\'m a button</string>

    <string name="title" translatable="false">Look at my GUI</string>
    <string name="ButtonClick" translatable="false">CLICK HERE</string>
    <string name="CheckBox" translatable="false">Check this out!</string>
    <string name="flagName" translatable="false">Canada</string>
    <string name="SwitchName" translatable="false">Switch On/Off</string>
    <string name="hint" translatable="false">Type here</string>
    <string name="Input" translatable="false">input</string>
    <string name="flg" translatable="false">flag</string>

    <string name="login_email" translatable="false">Enter your email address:</string>
    <string name="login_password" translatable="false">Type your password:</string>
    <string name="login_btn" translatable="false">LOGIN</string>
    <string name="weather_btn" translatable="false">Weather Forecast</string>
    <string name="login_hint_email" translatable="false">Type email here</string>

    <string name="profile_title" translatable="false">Your profile</string>
    <string name="profile_name" translatable="false">Your name:</string>
    <string name="profile_email" translatable="false">Your email:</string>
    <string name="profile_picture" translatable="false">Your picture:</string>
    <string name="profile_name_hint" translatable="false">Enter your name</string>
    <string name="profile_email_hint" translatable="false">Enter your email</string>
    <string name="profile_picture_hint" translatable="false">Click the button above to take a picture</string>

    <string name="profile_button" translatable="false">Go to Chat</string>
    <string name="btn_send" translatable="false">Send</string>
    <string name="btn_receive" translatable="false">Receive</string>
    <string name="hit" translatable="false">Type here...</string>


    <!-- recipe -->
    <string name="activity_name" translatable="false">Recipe-for-you</string>

    <!-- Menu Icons -->
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_bookmarks" translatable="false">farvorate</string>
    <string name="menu_search" translatable="false">Search</string>
    <string name="menu_help" translatable="false">Help</string>
    <string name="menu_back" translatable="false">Back</string>
    <string name="menu_unsaved" translatable="false">Save</string>
    <string name="menu_saved" translatable="false">Unsave</string>

    <!-- recipe Activity -->
    <string name="recipe_edit_search_box" translatable="false">Search</string>
    <string name="recipe_snackbar_message" translatable="false">Back to main page</string>
    <string name="recipe_snackbar_button" translatable="false">Back</string>
    <string name="recipe_toast_implementation" translatable="false">Feature not implemented yet</string>

    <string name="recipe_instructions" translatable="false">
            Activity: &recipe;\n
            Author: &author;\n
           Clicking on the recipe will take you to a new page with recipe details.
            \ n
            You can click on link to access your favorite recipes. These are your recipes that have been saved and will be from your favorite.

            \ n
            You can also click on the link  view the full text on its original website.
        </string>
    <string name="recipe_dialog_close" translatable="false">Close</string>


    <string name="recipe_saved_message" translatable="false">Added to favorites</string>
    <string name="recipe_unsaved_message" translatable="false">Removed from favorites</string>
    <string name="recipe_link" translatable="false">Link</string>

    <string name="recipe_actionbar_titles" translatable="false">likes</string>


    <!--Feng-->
    <string name="car_title" translatable="false">Find Car Station</string>
    <string name="car_title_hint" translatable="false">Please input your location to find stations:</string>
    <string name="car_lat" translatable="false">Lat:</string>
    <string name="car_lon" translatable="false">Lon:</string>
    <string name="car_find" translatable="false">Find</string>
    <string name="car_new" translatable="false">New</string>

    <string name="title_activity_maps" translatable="false">Map</string>

    <string name="help_name" translatable="false">Autors name: Feng Sun</string>
    <string name="help_version" translatable="false">Version:1.2.0</string>
    <string name="help_instructions" translatable="false"><a href="https://openchargemap.org/site/develop/api?ref=public-apis">How to use Electric Car Charging Station Data interface</a></string>


    <string name="project_name" translatable="false">Autors name: Feng Sun, WeiDong Yang,  </string>
    <string name="project_version" translatable="false">Version:1.0.0</string>
    <string name="project_instructions" translatable="false"><a href="https://openchargemap.org/site/develop/api?ref=public-apis">How to use Electric Car Charging Station Data interface</a></string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


    <!-- news Activity -->

    <string name="button4_name" translatable="false">NEW YORK TIME</string>
    <string name="group_message" translatable="false">======MADE BY======</string>
    <string name="member4_name" translatable="false">(NEWS)</string>
    <string name="mylist" translatable="false">MY LIST</string>
    <string name="news_searchbtn" translatable="false">Search</string>
    <string name="news_savebtn" translatable="false">Save</string>
    <string name="buttonhome_name" translatable="false">Home</string>
    <string name="heip_item_name" translatable="false">Help</string>
    <string name="about_item_name" translatable="false">About</string>
    <string name="project_title" translatable="false">CST2355GroupProject</string>
    <string name="version_info" translatable="false">Demo 1.0</string>
    <string name="m4_help_title" translatable="false">NEWYORKTIME HELP PAGE</string>
    <string name="m4_help_message" translatable="false">This is help page for CST2355 Final Demo</string>
    <string name="search_result" translatable="false">Search Result</string>
    <string name="delete" translatable="false">DELETE DATA</string>
    <string name="exit" translatable="false">Exit</string>
    <string name="title_activity_news_web_article" translatable="false">NEWSWebArticleActivity</string>
    <string name="favorate" translatable="false">favorate</string>
    <string name="line_id" translatable="false">line id</string>
    <string name="Removed_from_database" translatable="false">Removed from database</string>






</resources>
