<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".carcharing_locations.FristFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"></LinearLayout>


    <TextView
        android:id="@+id/txt_help_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"
        android:text="@string/help_name" />

    <TextView
        android:id="@+id/txt_help_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"
        android:text="@string/help_version" />


    <TextView
        android:id="@+id/txt_help_ins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_instructions" />

</LinearLayout>